Fixed layout bugs

--- a/src/components/auctions/AuctionsTabs.scss
+++ b/src/components/auctions/AuctionsTabs.scss
@@ -552,6 +552,10 @@
         margin-bottom: 15px;
 
         h3 {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          max-width: 250px;
           font-family: $sharpGroteskMediumFont;
           font-weight: 600;
           font-size: 14px;
